<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedIds">

    <group
        android:id="@+id/group"
        android:checkableBehavior="single">
    <item android:id="@+id/nav_patients"
        android:title="@string/patients"
        android:icon="@mipmap/ic_list_black_24dp"
        android:checked="true"/>

    <item android:id="@+id/nav_account"
        android:title="@string/my_account"
        android:icon="@mipmap/ic_person_black_24dp"/>

    <item android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@mipmap/ic_settings_black_24dp"/>

    <item android:id="@+id/nav_help"
        android:title="@string/help"
        android:icon="@mipmap/ic_help_black_24dp"/>
    </group>
</menu>