<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.g4bootcamp.nurseassistant.Help">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="49dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/malfunctions"
            android:textColor="@color/common_plus_signin_btn_text_light_focused"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btn_mail"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="45dp"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/phonenumber"
            android:textAlignment="center"
            android:textColor="@color/common_plus_signin_btn_text_light_focused"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/editText2"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/emailaddress"
            android:textAlignment="center"
            android:textColor="@color/common_plus_signin_btn_text_light_focused"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_call"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/textView3"
            android:layout_marginBottom="161dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/roboto_medium"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/call"
            android:textColor="@color/common_plus_signin_btn_text_dark_default"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_mail"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignBottom="@+id/btn_call"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="45dp"
            android:background="@drawable/round_button"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/message"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp" />



    </RelativeLayout>
</FrameLayout>