<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bluegradient"
    tools:context="com.g4bootcamp.nurseassistant.LoginActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/login"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        tools:textColorHighlight="@android:color/darker_gray" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/et_email"
        android:layout_below="@+id/et_email"
        android:layout_marginTop="17dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="@font/roboto_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textColorHighlight="@android:color/darker_gray"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="299dp"
        android:layout_height="38dp"
        android:layout_alignEnd="@+id/et_email"
        android:layout_below="@+id/imageVLogo"
        android:fontFamily="@font/work_sans_medium"
        android:text="Nurse Assistant"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="28sp"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="213dp" />


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/et_password"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:background="@color/bluebutton"
        android:fontFamily="@font/roboto_medium"
        android:onClick="onClick"
        android:shadowColor="@color/colorPrimaryDark"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="@color/greySoft"
        android:textSize="18sp" />


    <ImageView
        android:id="@+id/imageVLogo"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        custom:srcCompat="@drawable/logo" />


</RelativeLayout>
