<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.g4bootcamp.nurseassistant.PatientViewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="118dp"
                android:layout_height="114dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="72dp"
                android:src="@drawable/user"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:layout_width="229dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/imageView2"
                android:layout_marginStart="146dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/patient_view_code"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/personalcode" />

                    <TextView
                        android:id="@+id/patient_view_room"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/room" />

                    <TextView
                        android:id="@+id/patient_view_floor"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/floor" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/patient_view_code2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="" />

                    <TextView
                        android:id="@+id/patient_view_room2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="" />

                    <TextView
                        android:id="@+id/patient_view_floor2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ListView
                android:id="@+id/recipe_list_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp" />
        </RelativeLayout>
    </LinearLayout>

    <include
        android:id="@+id/nav_actionbar"
        layout="@layout/main_navigation_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </include>

</android.support.constraint.ConstraintLayout>
